[gd_scene load_steps=3 format=3 uid="uid://tw22funjeskh"]

[ext_resource type="Script" path="res://scenes/player_target_area.gd" id="1_ny8hm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecchv"]
size = Vector2(96, 96)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_ny8hm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ecchv")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
